fixed article height in blog grid and image align

--- a/assets/scss/et-builder/custom.scss
+++ b/assets/scss/et-builder/custom.scss
@@ -40,6 +40,10 @@
 	}
 }
 
+img {
+	height: auto;
+}
+
 .panel-heading .triangle {
 	z-index: 99;
 }
@@ -135,3 +139,13 @@ body.active-search {
 		}
 	}
 }
+
+
+// WP standard alignment classes
+
+img.alignright { float: right; margin: 0 0 1em 1em; }
+img.alignleft { float: left; margin: 0 1em 1em 0; }
+img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
+.alignright { float: right; }
+.alignleft { float: left; }
+.aligncenter { display: block; margin-left: auto; margin-right: auto; }
