--- a/assets/scss/et-builder/divi-builder.scss
+++ b/assets/scss/et-builder/divi-builder.scss
@@ -240,7 +240,6 @@
 
 .et-db #et-boc .clearfix {
 	clear: none;
-	display: initial
 }
 
 
